--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <section id="hakkimda">
         <h2>Hakkımda</h2>
         <p>
-            Benim adım Saadet Gökbulut. Bilgisayar Mühendisliği 4. Sınıf Öğrencisiyim. 
+            Benim adım Saadet Gökbulut. Bilgisayar Mühendisliği 4. Sınıf Öğrencisiyim.
+            Object detection ve tracking alanında çalışmalar yapmaktayım. Çalışmalarımı Jetson Xavier NX üzerinde sürdürmekteyim.
+            Machine learning and deep learning alanında öğrenmeye devam etmekteyim.
         </p>
     </section>
     <section id="yetenekler">
@@ -31,7 +33,7 @@
         <div class="skill">
             <h3><u>C#</u></h3>
             <div class="skill-meter">
-                <div class="skill-level" style="width: 80%;"></div>
+                <div class="skill-level" style="width: 10%;"></div>
             </div>
             <p>%80</p>
         </div>
@@ -39,30 +41,32 @@
         <div class="skill">
             <h3><u>HTML</u></h3>
             <div class="skill-meter">
-                <div class="skill-level" style="width: 60%;"></div>
+                <div class="skill-level" style="width: 10%;"></div>
             </div>
             <p>%60</p>
         </div>
         <div class="skill">
-            <h3><u>JavaScript</u></h3>
+            <h3><u>object tracking</u></h3>
             <div class="skill-meter">
-                <div class="skill-level" style="width: 40%;"></div>
+                <div class="skill-level" style="width: 60%;"></div>
             </div>
             <p>%40</p>
         </div>
         <div class="skill">
             <h3><u>Python</u></h3>
             <div class="skill-meter">
-                <div class="skill-level" style="width: 80%;"></div>
+                <div class="skill-level" style="width: 60%;"></div>
             </div>
             <p>%80</p>
         </div>
         <div class="skill">
-            <h3><u>CSS</u></h3>
+            <h3><u>OpenCV</u></h3>
             <div class="skill-meter">
                 <div class="skill-level" style="width: 60%;"></div>
-            </div>
-            <p>%60</p>
+            </div class="skill">
+             <h3><u>Real time multiple object tracking</u></h3>
+            <div class="skill-meter">
+                <div class="skill-level" style="width: 60%;">
         </div>
         
     </section>
