--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             <h3><u>C#</u></h3>
             <div class="skill-meter">
                 <div class="skill-level" style="width: 10%;"></div>
-            </div>
-            <p>%80</p>
+            <p>%80</p></div>
         </div>
         
         <div class="skill">
@@ -66,7 +65,7 @@
             </div class="skill">
              <h3><u>Real time multiple object tracking</u></h3>
             <div class="skill-meter">
-                <div class="skill-level" style="width: 60%;">
+                <div class="skill-level" style="width: 60%;"></div>
         </div>
         
     </section>
